<resources>
    <string name="app_name">App</string>
    <string name="app_id">todo-sync-tmikv</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="already_have_account">Already have an account? Log in</string>
    <string name="does_not_have_account">Don\'t have an account? Create account</string>
    <string name="welcome">"Welcome !"</string>
    <!---->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Not a valid password</string>
    <string name="login_failed">"Login failed"</string>
</resources>